refactor: small cosmetic fixes (#82)